--- a/frontend/src/styles/components/followinglist.scss
+++ b/frontend/src/styles/components/followinglist.scss
@@ -1,7 +1,7 @@
 .following-display {
   overflow: auto;
 
-  >form>button {
+  .following-form>form>button {
     width: 100%;
     margin-top: 5px;
   }
@@ -17,6 +17,8 @@
   .btn:first-of-type {
     margin-right: 5px;
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
 
